--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,6 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <canvas id="canvas" width="1900" height="1060" style="border:1px solid #000000;">
+    <canvas id="canvas" width="1900" height="1060">
   </body>
 </html>
